# summars

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  coffee.yml  pyproject.toml
.github/workflows/: ci.yml  latest_v25.09.yml  latest_v25.12.yml  latest_v26.04.yml  latest_v26.06.yml  master_v25.09.yml  master_v25.12.yml  master_v26.04.yml  master_v26.06.yml  release.yml
protos/: hold.proto
src/: config.rs  forwards.rs  invoices.rs  lib.rs  main.rs  pays.rs  rpc.rs  structs.rs  summars.rs  summary.rs  tables.rs  tasks.rs  util.rs
tests/: pyproject.toml  setup.sh  test_summars.py  util.py
