[package]
name = "summars"
version = "5.0.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["fs","sync","rt-multi-thread"] }
cln-rpc = "0.4"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.3" }
cln-plugin = "0.4"
# cln-plugin = { path="../lightning/plugins/", version = "^0.3" }

tabled = "0.18"

fixed_decimal = "0.5"
icu_decimal = "1"

icu_locid = "1"
sys-locale = "0.3"

icu_datetime = "1"
icu_calendar = { version = "1", default-features = false, features = ["std"]}

struct-field-names-as-array = "0.3"
chrono = "0.4"
parking_lot = "0.12"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
