[package]
name = "summars"
version = "5.2.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread"] }
cln-rpc = "0.5"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.4" }
cln-plugin = "0.5"
# cln-plugin = { path="../lightning/plugins/", version = "^0.4" }

tabled = "0.20"

fixed_decimal = "0.7"
icu_decimal = "2"

icu_locale = "2"
sys-locale = "0.3"

icu_datetime = "2"
icu_calendar = "2"
icu_time = "2"

struct-field-names-as-array = "0.3"
chrono = "0.4"
parking_lot = "0.12"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
