[package]
name = "summars"
version = "6.0.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hold = ["dep:tonic", "dep:prost", "dep:tonic-prost"]
default = ["hold"]

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ['std'] }
log-panics = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["fs", "sync"] }
cln-rpc = "0.5"
# cln-rpc = { path = "../lightning/cln-rpc/", version = "^0.5" }
cln-plugin = "0.5"
# cln-plugin = { path = "../lightning/plugins/", version = "^0.5" }

tabled = "0.20"

fixed_decimal = "0.7"
icu_decimal = "2"

icu_locale = "2"
sys-locale = "0.3"

icu_datetime = "2"
icu_calendar = "2"
icu_time = "2"

chrono = "0.4"
parking_lot = "0.12"

strum = { version = "0.27", features = ["derive"] }

tonic = { version = "0.14", optional = true, default-features = false, features = [
    "codegen",
    "transport",
    "tls-ring",
] }
prost = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }

lightning-invoice = "0.34.0"

[build-dependencies]
tonic-prost-build = "0.14"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
